agrego validaciones en reseñas y saco coido innecesario de swagger, reservas.html y reseñas.html
